<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addDate">

    <include
        layout="@layout/update_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/complete_border"
        android:gravity="center"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemTitleLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:counterEnabled="true"
            app:counterMaxLength="40">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="7"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/hint_title"
                android:inputType="textMultiLine|textPersonName"
                android:maxLength="40" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateMeaning"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="7"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/daterepresent"
                android:inputType="none"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemTitleLayout1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:counterEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateInput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="7"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/hint_date"
                android:inputType="none"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemTitleLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:counterEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timeInput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="7"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/hint_time"
                android:inputType="none"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/toggleLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/repeatToggle2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:showText="true"
                android:textOff="@string/switch_text_off"
                android:textOn="@string/switch_text_on"
                android:textSize="12sp" />

        </LinearLayout>

        <Spinner
            android:id="@+id/SpinnerFireGrowth"
            style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:spinnerMode="dialog"
            app:layout_column="0"
            app:layout_row="10"
            tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        <EditText
            android:id="@+id/yearmonthInput2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/yearmonthinput"
            android:visibility="gone" />

        <TextView
            android:id="@+id/dateToString2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            android:visibility="gone" />

        <TextView
            android:id="@+id/daysBetween2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" />

        <TextView
            android:id="@+id/hour2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="TextView"
            android:visibility="gone" />

        <TextView
            android:id="@+id/minute2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="TextView"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/toggleLayout5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="gone">

            <ToggleButton
                android:id="@+id/weektoggle2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textOff="@string/week_toggle_off"
                android:textOn="@string/week_toggle_on"
                android:textSize="12sp" />

            <ToggleButton
                android:id="@+id/monthToggle2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:showText="true"
                android:textOff="@string/monthly_toggle_off"
                android:textOn="@string/monthly_toggle_on"
                android:textSize="12sp" />

            <ToggleButton
                android:id="@+id/yearToggle2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:showText="true"
                android:textOff="@string/yearly_toggle_off"
                android:textOn="@string/yearly_toggle_on"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/updateButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="Update Date" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>